商品出品機能の実装

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -180,8 +180,14 @@
   </div>
   <%# /商品一覧 %>
 </div>
-<%= link_to('#', class: 'purchase-btn') do %>
+<div class='purchase-btn'>
   <span class='purchase-btn-text'>出品する</span>
-  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-<% end %>
+  <% if user_signed_in? %>
+   <a href= "/items/new">
+  <% else %>
+   <a href= "/users/sign_in">
+  <% end %>
+    <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+  </a>
+</div>
 <%= render "shared/footer" %>
