--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -128,17 +128,17 @@
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
     <% if @items.present?%>
-        <% @items .each do |item| %>
+       <% @items .each do |item| %>
         <li form_with class='list'>
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
          <%= image_tag item.image, class: 'item-img' %>
           <%# 商品が売れていればsold outを表示しましょう %>
-          <%# if item.purchase.presence %>
-          <%#<div class='sold-out'>
-            <span>Sold Out!!</span>
-          </div>
-          <%# end %>
+          <% if item.order.present? %>
+              <div class='sold-out'>
+              <span>Sold Out!!</span>
+              </div>
+          <% end %>
           <%# //商品が売れていればsold outを表示しましょう %>
         </div>
         <div class='item-info'>
